--- a/package.json
+++ b/package.json
@@ -73,6 +73,6 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://10.9.52.31:9443/r/CH.Smart.EnergyWeb.git"
+    "url": "https://github.com/Hwacc/eEnergyWeb.git"
   }
 }
